--- a/arch/arm/configs/hikari_defconfig
+++ b/arch/arm/configs/hikari_defconfig
@@ -417,7 +417,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
-# CONFIG_MSM_MPDEC is not set
+CONFIG_MSM_MPDEC=y
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_GPU_OVERCLOCK=y
 # CONFIG_MSM_AVS_HW is not set
@@ -1827,9 +1827,17 @@ CONFIG_SENSORS_MSM_ADC=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_MSM_POPMEM is not set
-CONFIG_THERMAL_TSENS=y
-# CONFIG_THERMAL_TSENS8960 is not set
-CONFIG_THERMAL_PM8XXX=y
+# CONFIG_THERMAL_TSENS is not set
+CONFIG_THERMAL_TSENS8x60=y
+# CONFIG_THERMAL_PM8XXX is not set
+CONFIG_THERMAL_MONITOR=y
+CONFIG_DEF_ALLOWED_MAX_HIGH=85
+CONFIG_DEF_ALLOWED_MAX_FREQ=384000
+CONFIG_DEF_ALLOWED_MID_HIGH=75
+CONFIG_DEF_ALLOWED_MID_FREQ=648000
+CONFIG_DEF_ALLOWED_LOW_HIGH=65
+CONFIG_DEF_ALLOWED_LOW_FREQ=972000
+CONFIG_DEF_THERMAL_CHECK_MS=1000
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
