--- a/arch/arm/configs/hikari_defconfig
+++ b/arch/arm/configs/hikari_defconfig
@@ -419,6 +419,7 @@ CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 # CONFIG_MSM_MPDEC is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_GPU_OVERCLOCK=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
