configs: set vfs_cache_pressure

--- a/arch/arm/configs/nozomi_defconfig
+++ b/arch/arm/configs/nozomi_defconfig
@@ -2790,6 +2790,7 @@ CONFIG_CLKDEV_LOOKUP=y
 #
 # File systems
 #
+CONFIG_VFS_CACHE_PRESSURE=25
 CONFIG_EXT2_FS=y
 # CONFIG_EXT2_FS_XATTR is not set
 # CONFIG_EXT2_FS_XIP is not set
