--- a/arch/arm/configs/hikari_defconfig
+++ b/arch/arm/configs/hikari_defconfig
@@ -34,7 +34,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-NOVA-Kernel-v1.0"
+CONFIG_LOCALVERSION="-NOVA-Kernel-exp"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
