--- a/arch/arm/configs/hikari_defconfig
+++ b/arch/arm/configs/hikari_defconfig
@@ -501,6 +501,7 @@ CONFIG_PMIC8058_MIC_BIAS=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_DCVS is not set
 # CONFIG_SONY_SSM is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # System MMU
