--- a/arch/arm/configs/hikari_defconfig
+++ b/arch/arm/configs/hikari_defconfig
@@ -1058,7 +1058,7 @@ CONFIG_NET_SCH_FIFO=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
-CONFIG_BPF_JIT=y
+# CONFIG_BPF_JIT is not set
 
 #
 # Network testing
