--- a/drivers/thermal/Kconfig
+++ b/drivers/thermal/Kconfig
@@ -36,7 +36,7 @@ config THERMAL_MSM_POPMEM
 	  application to make all policy decisions.
 
 config THERMAL_TSENS
-	tristate "Old Qualcomm Tsens Temperature Alarm"
+	tristate "Qualcomm Tsens Temperature Alarm"
 	depends on THERMAL
 	default n
 	help
@@ -46,8 +46,8 @@ config THERMAL_TSENS
 	  Also able to set threshold temperature for both hot and cold and update
 	  when a threshold is reached.
 
-config THERMAL_TSENS8x60
-	tristate "New Qualcomm 8x60 Tsens Temperature Alarm"
+config THERMAL_TSENS8960
+	tristate "Qualcomm 8960 Tsens Temperature Alarm"
 	depends on THERMAL
 	help
 	  This enables the thermal sysfs driver for the Tsens device. It shows
@@ -76,38 +76,3 @@ config THERMAL_MONITOR
 	  absence of a system wide thermal monitoring entity or until such an
 	  entity starts running in the userspace. Monitors TSENS temperature
 	  and limits the max frequency of the cores.
-
-config DEF_ALLOWED_MAX_HIGH
-	int "Stage 3 Thermal Temp Limit"
-	depends on THERMAL
-	default 85
-
-config DEF_ALLOWED_MAX_FREQ
-	int "Stage 3 Thermal MaxFreq"
-	depends on THERMAL
-	default 384000
-
-config DEF_ALLOWED_MID_HIGH
-	int "Stage 2 Thermal Temp Limit"
-	depends on THERMAL
-	default 75
-
-config DEF_ALLOWED_MID_FREQ
-	int "Stage 2 Thermal MaxFreq"
-	depends on THERMAL
-	default 648000
-
-config DEF_ALLOWED_LOW_HIGH
-	int "Stage 1 Thermal Temp Limit"
-	depends on THERMAL
-	default 65
-
-config DEF_ALLOWED_LOW_FREQ
-	int "Stage 1 Thermal MaxFreq"
-	depends on THERMAL
-	default 972000
-
-config DEF_THERMAL_CHECK_MS
-	int "Sampling Rate for Kernal Based THERMALD Service"
-	depends on THERMAL
-	default 1000
