--- a/arch/arm/configs/nozomi_defconfig
+++ b/arch/arm/configs/nozomi_defconfig
@@ -417,7 +417,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
-# CONFIG_MSM_MPDEC is not set
+CONFIG_MSM_MPDEC=y
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_GPU_OVERCLOCK=y
 # CONFIG_MSM_AVS_HW is not set
